# router3313geeewq

./: .dockerignore  .env.example  Dockerfile  README.md  development_plan.md  distribution_deals_spec.md  fly.toml  pyproject.toml  setup.py
src/bitrix_taxi_router/: app.py  bitrix_api.py  contracts.py  install_page.py  main.py  schema.py  service.py  settings.py  ui.py
src/bitrix_taxi_router/api/: __init__.py  bindings.py  event_routes.py  helpers.py  install_routes.py  payloads.py  responses.py  ui_data_routes.py  ui_page_routes.py  ui_routes.py
src/bitrix_taxi_router/bitrix/: __init__.py  normalizers.py
src/bitrix_taxi_router/services/: __init__.py  assignment.py  common.py  config_store.py  deal_events.py  deal_processing.py  diagnostic_store.py  distribution_config.py  distribution_store.py  event_binding.py  event_dispatch.py  portal_store.py  runtime_store.py  statistics.py
src/bitrix_taxi_router/web/: __init__.py  install_page.py
src/bitrix_taxi_router/web/groups/: __init__.py  markup.py  page.py  script_actions.py  script_data.py  script_render.py  script_state.py  scripts.py  styles.py
tests/: test_app.py  test_service.py
